tests/NormalTests/paczka1/small_fuzzy/21890293.err
Error in line 5: u9E A174 8,7
Error in line 6: u9E S202 64,0
Error in line 1: rn2UMpDN A174 48,7
Error in line 11: rn2UMpDN S343 17,9
